--- a/src/index.scss
+++ b/src/index.scss
@@ -22,3 +22,12 @@ p {
 button {
   cursor: pointer;
 }
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
